Tickets Sockets Nodejs

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server/server.js",
-        "dev": "nodemon server/server.js"
+        "dev": "nodemon server/server.js -e js,hbs"
     },
     "author": "Juan Carlos",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.16.3",
+        "hbs": "^4.1.1",
         "socket.io": "^2.3.0"
     }
 }
